6795465: Crash in assembler_sparc.cpp with client compiler on solaris-sparc

Reviewed-by: twisti, cfang